--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -228,6 +228,8 @@ body {
   font-size: 0.9rem;
   transition: border-color var(--transition), box-shadow var(--transition);
   width: 100%;
+  height: 42px;
+  box-sizing: border-box;
 }
 
 .fm-input:focus {
@@ -265,6 +267,8 @@ body {
   width: 100%;
   cursor: pointer;
   appearance: none;
+  height: 42px;
+  box-sizing: border-box;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='%23b5c7bd' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='m6 9 6 6 6-6'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: right 12px center;
